...


    tools:context="appx_homescreen.appx.RegisterActivity"
    android:id="@+id/RelLayout">

    <Spinner
        android:id="@+id/prefix_spinner"
        android:layout_width="72dp"
        android:layout_height="30dp"
        android:layout_marginTop="200dp"
        android:layout_alignLeft="@+id/textView11"
        android:layout_alignStart="@+id/textView11"

...
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Register"
        android:id="@+id/register"
        android:onClick="onClick"
        android:layout_alignBottom="@+id/textView3"
        android:layout_marginBottom="40dp"
        android:layout_alignLeft="@+id/editOccupation"
        android:textSize="17dp"
        android:height="60dp"
        android:layout_alignRight="@+id/a1"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="-30dp" />

...

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editFirstName"
        android:width="90dp"
        android:hint="John"
        android:layout_alignTop="@+id/prefix_spinner"
        android:layout_toRightOf="@+id/prefix_spinner"
        android:layout_marginTop="-5dp"
        android:layout_marginLeft="5dp"
        android:layout_alignRight="@+id/textView9"
        android:layout_alignEnd="@+id/textView9"
        android:layout_marginRight="10dp"
        android:nextFocusDown="@+id/editLastName"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editLastName"
        android:width="90dp"
        android:hint="Smith"
        android:layout_alignTop="@+id/editFirstName"
        android:layout_alignRight="@+id/edLevel_spinner"
        android:layout_alignEnd="@+id/edLevel_spinner"
        android:layout_toRightOf="@+id/textView9"
        android:layout_toEndOf="@+id/textView9"
        android:nextFocusDown="@+id/editAge"/>

    <TextView
...
        android:hint=" 21"
        android:nextFocusDown="@+id/editOccupation"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editOrg"
        android:hint="VCU"
        android:layout_below="@+id/textView18"
        android:layout_alignLeft="@+id/textView18"
        android:layout_alignStart="@+id/textView18"
        android:layout_toStartOf="@+id/textView17"
        android:layout_alignRight="@+id/textView18"
...

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editPassword"
        android:hint="password"
        android:layout_marginBottom="33dp"
        android:layout_above="@+id/register"
        android:layout_alignLeft="@+id/editEmail"
        android:layout_alignStart="@+id/editEmail" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
...
