<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" android:background="#ffffff"
        android:paddingLeft="15dip"
        android:paddingRight="15dip"
        android:id="@+id/RelLayout">

    <!--  Header  Starts-->
    <LinearLayout android:id="@+id/header"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dip"
        android:paddingBottom="5dip">
        <!--android:background="@layout/header_gradient" -->
    <!-- Logo Start-->
    <!-- <ImageView android:src="@drawable/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip"/> -->
    <!-- Logo Ends -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="What&apos;s Going On?"
            android:id="@+id/textView2"
            android:textStyle="bold"
 />

        </LinearLayout>

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dip"
            android:layout_below="@id/header"
            android:id="@+id/body"
            android:weightSum="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Please login below."
                android:id="@+id/textView10"
                android:layout_marginTop="30dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="E-mail"
                android:id="@+id/textView12"
                android:layout_marginTop="40dp"
                android:textStyle="bold"
                android:layout_marginLeft="20dp" />

            <EditText
        android:layout_width="248dp"
        android:layout_height="40dp"
        android:inputType="textEmailAddress"
        android:hint="jsmith@vcu.edu"
        android:ems="10"
        android:id="@+id/editUsername"
        android:background="@drawable/edittext_bg"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="50dp"
                android:layout_weight="0.12"
                android:padding="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Password"
                android:id="@+id/textView22"
                android:layout_marginTop="30dp"
                android:textStyle="bold"
                android:layout_marginLeft="20dp" />

            <EditText
        android:layout_width="248dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="Password"
        android:ems="10"
        android:id="@+id/editPassword"
                android:background="@drawable/edittext_bg"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/editUsername"
        android:layout_alignLeft="@+id/editUsername"
        android:layout_alignStart="@+id/editUsername"
                android:layout_marginLeft="50dp"
                android:layout_weight="0.13"
                android:padding="10dp" />

    <Button
        android:layout_width="235dp"
        android:layout_height="wrap_content"
        android:text="@string/loginButton"
        android:id="@+id/loginButton"
        android:width="150dp"
        android:onClick="onClick"
        android:layout_below="@+id/editPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal"
        android:height="50dp"
        android:textColor="#FFFFFFFF"
        android:background="#4e8f9c"
        android:textSize="20dp"
        android:textStyle="normal" />

            <TextView android:id="@+id/link_to_register"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="40dip"
                android:text="New to What&apos;s Going On? Click here."
                android:textSize="17dip"
                android:textColor="#0b84aa"
                android:linksClickable="true"
                android:autoLink="web"
                android:onClick="onClick" />

            <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/testVal"
        android:layout_marginTop="44dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/loginButton" />

        </LinearLayout>

        <!-- Footer Start -->
        <LinearLayout android:id="@+id/footer"
            android:layout_width="fill_parent"
            android:layout_height="90dip"
            android:layout_alignParentBottom="true">
        </LinearLayout>
        <!-- Footer Ends -->
</RelativeLayout>

</ScrollView>